vlib/v/parser/tests/interface_duplicate_method.out
vlib/v/parser/tests/interface_duplicate_method.vv:5:12: error: duplicate method `foo`
    3 | // duplicate normal method definitions on interface
    4 | fn (a Abc) foo() {}
    5 | fn (a Abc) foo() {}
      |            ~~~
